--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pagina personal en GitHub</title>
+</head>
+<body>
+    <h1>Bienvenidos a mi pagina personal JesusUriel24</h1>
+    <hr>
+    <p>Esta es mi pagina web GitHub Pages</p>
+    
+</body>
+</html>
